[package]
name = "test_axum_database_sessions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
axum = { version = "0.5.7", features = ["headers"] }
# axum-extra = { version = "0.3.4", features = ["cookie-private"] }
axum_database_sessions = { version = "3.0.0", features = [ "postgres", "rustls"] }
axum_sessions_auth = { version = "2.0", features = [ "postgres", "rustls" ] }
sqlx = { version = "0.6.0", features = [ "postgres" ] }
tokio = { version = "1.17.0", features = [ "full" ] }
